tests/functional/lang/eval-fail-genericClosure-not-attrset.err
error:
       … while calling the 'genericClosure' builtin
         at /pwd/lang/eval-fail-genericClosure-not-attrset.nix:1:1:
            1| builtins.genericClosure "not an attrset"
             | ^
            2|

       … while evaluating the first argument passed to builtins.genericClosure

       error: expected a set but found a string: "not an attrset"
